[tool.poetry]
name = "loxscript"
version = "0.1.0"
description = ""
authors = ["Yash Rathi <yashrathicricket@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
loxscript = 'loxscript.__main__:main'